--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -20,7 +20,7 @@ jobs:
         xcodebuild \
           archive \
           -scheme GoogleSignIn-Package \
-          -destination "generic/platform=iOS"
+          -destination "generic/platform=iOS" \
           -archivePath "archives/GoogleSignIn-Package"
     - uses: actions/upload-artifact@v4
       with:
