--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,7 +21,7 @@ jobs:
           archive \
           -scheme GoogleSignIn-Package \
           -destination "generic/platform=iOS" \
-          -archivePath "archives/GoogleSignIn-Package"
+          -archivePath "./GoogleSignIn-Package"
     - uses: actions/upload-artifact@v4
       with:
         name: GoogleSignIn-Package
