--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,8 +21,8 @@ jobs:
           archive \
           -scheme GoogleSignIn-Package \
           -destination "generic/platform=iOS" \
-          -archivePath "./GoogleSignIn-Package"
+          -archivePath "build"
     - uses: actions/upload-artifact@v4
       with:
         name: GoogleSignIn-Package
-        path: archives/GoogleSignIn-Package      
+        path: build    
