--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -25,4 +25,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: GoogleSignIn-Package
-        path: GoogleSignIn-iOS/GoogleSignIn-iOS/build    
+        path: ./GoogleSignIn-iOS/GoogleSignIn-iOS/build    
